# wgpu_tutorial

./: Cargo.toml  run.bash
shaders/: triangle.comp  triangle.frag  triangle.vert
src/: main.rs
