[package]
name = "wgpu_triangles"
version = "0.1.0"
authors = ["James Newman <jdnewman85@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
winit = "*"
wgpu = "*"
futures = "*"
glsl-to-spirv = "*"
bytemuck = "*"
